@@ -101,9 +101,9 @@ binmode STDOUT, ":utf8";
 #define constants
 #--------------------------------------
 use constant MAX_ERROR			=> 5;
-use constant SHUTTER_REV		=> 'Rev.1174';
+use constant SHUTTER_REV		=> 'Rev.1175';
 use constant SHUTTER_NAME		=> 'Shutter';
-use constant SHUTTER_VERSION	=> '0.88';
+use constant SHUTTER_VERSION	=> '0.88.1';
 
 #--------------------------------------
 
